changes index & css

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,11 @@
             <div class="reproductor"></div>
         </section>
     </div>
+
+    <footer>
+        <p>© 2025 AnimeFlow. Todos los derechos reservados.</p>
+        <p>Desarrollado por <a href="https://github.com/Jealez-Dev">Jealez-Dev</a></p>
+    </footer>
 </body>
 
 </html>
